Query string for id of tenants implemented.

--- a/ExempelApp/MultiTenant/WebApplication/WebApplication.csproj
+++ b/ExempelApp/MultiTenant/WebApplication/WebApplication.csproj
@@ -269,6 +269,7 @@
     <Compile Include="DAL\SchoolContext.cs" />
     <Compile Include="DAL\SchoolInitializer.cs" />
     <Compile Include="DAL\SchoolInterceptorLogging.cs" />
+    <Compile Include="DAL\Tenant.cs" />
     <Compile Include="ErrorHandler\AiHandleErrorAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
