--- a/ExempelApp/SingleTenant/MigrateDatabase/App.config
+++ b/ExempelApp/SingleTenant/MigrateDatabase/App.config
@@ -9,6 +9,7 @@
     <!-- For local execution, the value can be set either in this config file or through environment variables -->
     <add name="AzureWebJobsDashboard" connectionString="" />
     <add name="AzureWebJobsStorage" connectionString="" />
+    <add name="SchoolContext" providerName="System.Data.SqlClient" connectionString="Server=tcp:exjobb-exempelapp.database.windows.net,1433;Initial Catalog=Exjobb1;Persist Security Info=False;User ID=Guest_CRM;Password=TreasuryGast!;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=10;" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
