--- a/ExempelApp/SingleTenant/MigrateDatabase/packages.config
+++ b/ExempelApp/SingleTenant/MigrateDatabase/packages.config
@@ -13,6 +13,8 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net471" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
+  <package id="Serilog" version="2.6.0" targetFramework="net471" />
+  <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net471" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net471" />
   <package id="System.Collections" version="4.3.0" targetFramework="net471" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net471" />
