--- a/ExempelApp/SingleTenant/WebApplication/packages.config
+++ b/ExempelApp/SingleTenant/WebApplication/packages.config
@@ -50,6 +50,9 @@
   <package id="Respond" version="1.4.2" targetFramework="net471" />
   <package id="Serilog" version="2.6.0" targetFramework="net471" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net471" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="net471" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.2.1" targetFramework="net471" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net471" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net471" />
   <package id="WebGrease" version="1.6.0" targetFramework="net471" />
 </packages>
