--- a/ExempelApp/MultiTenant/WebApplication/Web.config
+++ b/ExempelApp/MultiTenant/WebApplication/Web.config
@@ -18,7 +18,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!-- TODO: Olika inställningar för olika kunde / databaserr-->
-    <add key="ApplicationName" value="Applikation - KUND A" />
+    <add key="ApplicationName" value="Applikation - Pattys Code and Vacuumcleaners" />
     <add key="serilog:minimum-level" value="Verbose" />
     <!-- Tenant/AzureAd that are allowed to log in (comma separated) list -->
     <!-- Setting should be configured in octopus or in azure webapp per environment-->
