--- a/ExempelApp/MultiTenant/WebApplication/WebApplication.csproj
+++ b/ExempelApp/MultiTenant/WebApplication/WebApplication.csproj
@@ -275,6 +275,8 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="CatalogProvider.cs" />
+    <Compile Include="ConnectionStringProvider.cs" />
     <Compile Include="Controllers\CourseController.cs" />
     <Compile Include="Controllers\DepartmentController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
