--- a/ExempelApp/SingleTenant/Tenant01/WebApplication/Web.config
+++ b/ExempelApp/SingleTenant/Tenant01/WebApplication/Web.config
@@ -17,8 +17,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <!-- TODO: Olika inställningar för olika kunde / databaserr-->
-    <add key="ApplicationName" value="Applikation - KUND A" />
+    <add key="ApplicationName" value="Patrik's COBOL och Majsstärkelse AB" />
     <add key="serilog:minimum-level" value="Verbose" />
     <!-- Tenant/AzureAd that are allowed to log in (comma separated) list -->
     <!-- Setting should be configured in octopus or in azure webapp per environment-->
