Changed place for connection string

--- a/ExempelApp/SingleTenant/Tenant01/WebApplication/Web.config
+++ b/ExempelApp/SingleTenant/Tenant01/WebApplication/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <!-- This is connectionstring used when running update-database -->
-    <add name="SchoolContext" providerName="System.Data.SqlClient" connectionString="Server=tcp:exjobb-exempelapp.database.windows.net,1433;Initial Catalog=Exjobb1;Persist Security Info=False;User ID=Guest_CRM;Password=TreasuryGast!;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=10;" />
+    <add name="SchoolContext" providerName="System.Data.SqlClient" connectionString="Server=tcp:exjobb-exempelapp.database.windows.net,1433;Initial Catalog=ExjobbSingle01;Persist Security Info=False;User ID=Guest_CRM;Password=TreasuryGast!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
