--- a/ExempelApp/MultiTenant/WebApplication/WebApplication.csproj
+++ b/ExempelApp/MultiTenant/WebApplication/WebApplication.csproj
@@ -398,6 +398,7 @@
     <Content Include="Scripts\esm\popper-utils.min.js.map" />
     <Content Include="Scripts\esm\popper-utils.js.map" />
     <Content Include="Connected Services\AzureAD\ConnectedService.json" />
+    <None Include="Properties\PublishProfiles\CrmExjobbMulti - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
